# permission-system-boilerplate

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: di.py  main.py  models.py  schemas.py  security.py
src/api/: admin.py  auth.py  documents.py  user.py
src/data/: database.py  repository.py  seeder.py
